# substrate-node-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  benchmarks.cmd
node/: Cargo.toml
node/src/: chain_spec.rs  rpc.rs
nodejs-test/: package-lock.json  package.json  test.js
pallets/demo/: Cargo.toml
pallets/demo/src/: lib.rs  tests.rs
pallets/iot-abac/: Cargo.toml  README.md
pallets/iot-abac/src/: lib.rs  types.rs
pallets/iot-identity/: Cargo.toml  README.md
pallets/iot-identity/src/: lib.rs
pallets/kitty/: Cargo.toml
pallets/kitty/src/: benchmarking.rs  lib.rs
pallets/loosely-coupling/: Cargo.toml
pallets/loosely-coupling/src/: lib.rs
pallets/pallet-abac/: Cargo.toml  README.md
pallets/pallet-abac/src/: lib.rs  types.rs
pallets/pallet-contracts/: Cargo.toml  README.md
pallets/pallet-contracts/src/: lib.rs
pallets/pallet-did/: Cargo.toml
pallets/pallet-did/src/: lib.rs  types.rs
pallets/template/src/: lib.rs
pallets/tightly-coupling/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: chain_extension.rs  lib.rs
