[package]
name = "pallet-did"
version = "0.0.1-dev"
description = "Substrate Decentralized Identifier Pallet"
edition = "2021"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>", "Nhuan Do"]
homepage = "https://substrate.dev"
repository = "https://github.com/donhuanvn/master-thesis"
license = "Unlicense"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true, features = ["derive"] }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
# frame-benchmarking = ...
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "serde",
  "frame-support/std",
  "frame-system/std",
  "sp-io/std",
  "sp-runtime/std",
]
